order code trans

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -135,6 +135,7 @@
   "view_on_map": "عرض على الخريطة",
   "proceed to payment": "تابع الى الدفع",
   "order_id": "رقم التعريف الخاص بالطلب",
+  "order_code": "رقم التعريف الخاص بالطلب",
   "your_purchase_is_successfully_completed": "تم الشراء بنجاح",
   "thank_you_for_placing_an_order_you_can_track_your_order.": "شكرا لك على تقديم الطلب. يمكنك تتبع طلبك.",
   "track_your_order": "أتبع طلبك",
@@ -363,7 +364,7 @@
   "our_branches": "فروعنا",
   "track_order": "تتبع الطلب",
   "check_your_order_status": "تابع حالة طلبك",
-  "enter_order_id": "أدخِل رقم الطلب",
+  "enter_order_code": "أدخِل كود الطلب",
   "estimated_time": "الوقت المتوقع",
   "order_pending": "في انتظار الطلب",
   "delivering_to_your_address": "سيصل إلى عنوانك",
