--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -139,6 +139,7 @@
   "view_on_map": "view on map",
   "proceed_to_payment": "proceed to payment",
   "order_id": "order id",
+  "order_code": "order code",
   "your_purchase_is_successfully_completed": "your purchase is successfully completed",
   "thank_you_for_placing_an_order.you_can_track_your_order.": "thank you for placing an order. you can track your order.",
   "track_your_order": "track your order",
@@ -351,7 +352,7 @@
   "our_branches": "our branches",
   "track_order": "track order",
   "check_your_order_status": "check your order status",
-  "enter_order_id": "enter order id",
+  "enter_order_code": "enter order code",
   "estimated_time": "estimated time",
   "order_pending": "order pending",
   "delivering_to_your_address": "delivering to your address",
