--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -405,8 +405,8 @@
   "house_no": "منزل رقم",
   "floor#": "الطابق",
   "office_no": "مكتب رقم",
-  "avenue": "رئيسي",
-  "paci": "البطاقة المدنية",
+  "avenue": "جادة",
+  "paci": " الرقم السكني",
   "additional": "إضافي",
   "deliver_now": "التوصيل الآن",
   "deliver_later": "التوصيل لاحقًا",
@@ -490,5 +490,6 @@
   "sorry_some_product_not_available_in_this_area" : "بعض المنتجات غير متوفرة في المنطقة المختارة.",
   "select_a_branch_or_area_before_order" : "يجب اختيار فرع أو منطقة قبل البدأ في عملية طلب. في حالة تغير الفرع أو المنطقة يرجى العلم بأن بعض المنتجات سيتم حذفها بناء على توفرها قرب منطقتك أو الفرع القريب منك. شكرا..",
   "order_code" : "رقم أمر العمل",
-  "please_select_payment_method": "من فضلك اختر طريقة الدفع"
+  "please_select_payment_method": "من فضلك اختر طريقة الدفع",
+  "floor_no" : "رقم الطابق"
 }
