--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -394,7 +394,7 @@
   "floor#": "floor#",
   "office_no": "office no",
   "avenue": "avenue",
-  "paci": "civil id",
+  "paci": "paci",
   "additional": "additional",
   "deliver_now": "deliver now",
   "deliver_later": "deliver later",
@@ -477,5 +477,6 @@
   "order_created_successfully" : "thank you .. your order has been placed. you can follow the status by your order number.",
   "sorry_some_product_not_available_in_this_area" : "sorry some product not available in this area",
   "select_a_branch_or_area_before_order" : "you have to choose a branch or an area. some products may be deleted from your shopping cart as it may not be available. thank you ...",
-  "please_select_payment_method": "please select payment method"
+  "please_select_payment_method": "please select payment method",
+  "floor_no" : "floor no"
 }
