--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -480,5 +480,6 @@
   "please_select_payment_method": "please select payment method",
   "selected": "selected",
   "floor_no" : "floor no",
-  "rate_is_required": "rate is required"
+  "rate_is_required": "rate is required",
+  "field_must_select_at_least_one" : "(required) you must select at least one choice."
 }
