input search height

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -429,7 +429,7 @@
   "qty": "qty",
   "item": "item",
   "add_on": "add on",
-  "sp_req": "sp req",
+  "sp_req": "sp. req",
   "delivery_fees" : "delivery fees",
   "cart_address" : "address details",
   "order_review" : "review order",
