--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -496,5 +496,6 @@
   "selected": "تم اختيارها",
   "floor_no" : "رقم الطابق",
   "rate_is_required": "التقييم مطلوب",
-  "field_must_select_at_least_one" : "يجب عليك اختيار حقل واحد فقط على الاقل"
+  "field_must_select_at_least_one" : "يجب عليك اختيار حقل واحد فقط على الاقل",
+  "we_re_sorry": "نحن اسفون"
 }
