--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -498,5 +498,6 @@
   "rate_is_required": "التقييم مطلوب",
   "field_must_select_at_least_one" : "يجب عليك اختيار حقل واحد فقط على الاقل",
   "we_re_sorry": "نحن اسفون",
-  "sp_req" : "طلب خاص"
+  "sp_req" : "طلب خاص",
+  "enter_extra_notes_for_product":"ادخل الملاحظات الاضافية للمنتج"
 }
