--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -503,5 +503,6 @@
   "enter_extra_notes_for_product":"ادخل الملاحظات الاضافية للمنتج",
   "delivery_time_and_date":"وقت و تاريخ التوصيل",
   "pickup_time_and_date":"وقت و تاريخ الاستلام",
-  "quantity_of_out_of_stock" : "هذا المنتج غير متاح"
+  "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
+  "no_results_found" : "لا توجد نتائج للبحث .."
 }
