--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -506,5 +506,6 @@
   "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
   "no_results_found" : "لا توجد نتائج للبحث ..",
   "your_order_has_been_recorded": "تم تسجيل طلبك",
-  "store_name": "اسم المخزن"
+  "store_name": "اسم المخزن",
+  "select_a_branch_or_area_before_order_or_some_fields_are_required_missing" : "يجب اختيار فرع / منطقة قبل البدأ في طلبك .. أو ان بعض الحقول مطلوبة"
 }
