--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -493,5 +493,6 @@
   "quantity_of_out_of_stock": "quantity of out of stock",
   "no_results_found" : "no results found",
   "your_order_has_been_recorded": "your order has been recorded.",
-  "store_name": "store name"
+  "store_name": "store name",
+  "let_us_know_more": "let us know more"
 }
