--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -497,5 +497,7 @@
   "let_us_know_more": "let us know more",
   "coupon_value" : "discount",
   "select_a_branch_or_area_before_order_or_some_fields_are_required_missing" : "select a branch or area before order or some fields are required missing",
-  "building_no":"building no"
+  "building_no":"building no",
+  "net_total" : "net total",
+  "total_before_tax" : "total before tax"
 }
