--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -499,5 +499,6 @@
   "select_a_branch_or_area_before_order_or_some_fields_are_required_missing" : "select a branch or area before order or some fields are required missing",
   "building_no":"building no",
   "net_total" : "net total",
-  "total_before_tax" : "total before tax"
+  "total_before_tax" : "total before tax",
+  "add": "add"
 }
