--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -513,5 +513,6 @@
   "building_no":"رقم المبنى",
   "net_total" : "الإجمالي",
   "total_before_tax" : "الإجمالي مع الضريبة",
-  "add": "أضف"
+  "add": "أضف",
+  "delivery_instructions" : "ملاحظات خاصة بعملية التوصيل"
 }
