--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -425,7 +425,7 @@
   "success": "نجاح",
   "thank_you": "شكرًا لك !",
   "your_order_is_confirmed_and_on_its_way": "تم تأكيد طلبك وفي طريقه",
-  "track_your_order_and_check_the_status_of_it_live": "تتبع طلبك وتحقق من حالته",
+  "track_your_order_status_below": "تتبع حالة طلبك من خلال الضغط على الزر بالاسفل",
   "order_again": "اطلب مرة ثانية",
   "promo_code_is_invalid" : "رقم الكوبون غير صحيح",
   "failure": "فشل",
@@ -506,7 +506,7 @@
   "pickup_time_and_date":"وقت و تاريخ الاستلام",
   "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
   "no_results_found" : "لا توجد نتائج للبحث ..",
-  "your_order_has_been_recorded": " شكرا لك . لقد تم تسجيل طلبك",
+  "your_order_has_been_received": " شكرا لك . لقد استلام طلبك بنجاح",
   "store_name": "اسم المخزن",
   "let_us_know_more": "اجعلنا نعرف المزيد",
   "select_a_branch_or_area_before_order_or_some_fields_are_required_missing" : "يجب اختيار فرع / منطقة قبل البدأ في طلبك .. أو ان بعض الحقول مطلوبة",
