--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -412,7 +412,7 @@
   "success": "success",
   "thank_you": "thank you !",
   "your_order_is_confirmed_and_on_its_way": "your order is confirmed and on its way",
-  "track_your_order_and_check_the_status_of_it_live": "track your order and check the status of it live",
+  "track_your_order_status_below": "track your order status below",
   "order_again": "order again",
   "promo_code_is_invalid": "promo code is invalid",
   "you_can_retry_your_order_placement_or_check_your_cart_items_before_processing_your_order": "you can retry your order placement or check your cart items before processing your order",
@@ -492,7 +492,7 @@
   "pickup_time_and_date": "pickup time & date",
   "quantity_of_out_of_stock": "quantity of out of stock",
   "no_results_found" : "no results found",
-  "your_order_has_been_recorded": "thank you. your order has been recorded.",
+  "your_order_has_been_received": "thank you. your order has been received.",
   "store_name": "store name",
   "let_us_know_more": "let us know more",
   "coupon_value" : "discount",
