--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -516,5 +516,6 @@
   "add": "أضف",
   "delivery_instructions" : "ملاحظات خاصة بعملية التوصيل",
   "pickup_now" : "استلام الطلب",
-  "estimated_prepration_time":"الوقت المحدد للتجهبز"
+  "estimated_prepration_time":"الوقت المحدد للتجهبز",
+  "invalid_area_data" : "يجب عليك اختيار منطقة أو فرع"
 }
