--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -503,5 +503,6 @@
   "add": "add",
   "delivery_instructions" : "delivery instructions",
   "pickup_now" : "pick up order",
-  "estimated_prepration_time":"estimated prepration time"
+  "estimated_prepration_time":"estimated prepration time",
+  "invalid_area_data" : "you must choose a branch or an area."
 }
