--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -518,5 +518,6 @@
   "pickup_now" : "استلام الطلب",
   "estimated_prepration_time":"الوقت المحدد للتجهبز",
   "enter_your_information_to_proceed":"ادخل بياناتك من فضلك",
-  "invalid_area_data" : "يجب عليك اختيار منطقة أو فرع"
+  "invalid_area_data" : "يجب عليك اختيار منطقة أو فرع",
+  "min":"دقيقة"
 }
