--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -505,5 +505,6 @@
   "pickup_now" : "pick up order",
   "estimated_prepration_time":"estimated prepration time",
   "enter_your_information_to_proceed":"please enter your information",
-  "invalid_area_data" : "you must choose a branch or an area."
+  "invalid_area_data" : "you must choose a branch or an area.",
+  "min":"min"
 }
