--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -519,5 +519,6 @@
   "estimated_prepration_time":"الوقت المحدد للتجهبز",
   "enter_your_information_to_proceed":"ادخل بياناتك من فضلك",
   "invalid_area_data" : "يجب عليك اختيار منطقة أو فرع",
-  "min":"دقيقة"
+  "min":"دقيقة",
+  "price_on_selection" : "السعر حسب الاختيار"
 }
