more notes are done

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -129,6 +129,7 @@
   "additional_instructions": "تعاليم اضافية",
   "on_map": "على الخريطة",
   "next": "تابع",
+  "next_pagination": "التالي",
   "set_your_current_location": "حدد موقعك الحالي",
   "map_location": "خريطة الموقع",
   "review_purchase_info": "مراجعة معلومات الشراء",
