--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -453,7 +453,7 @@
   "address_saved_successfully":"تم حفظ العنوان بنجاح",
   "delivery_now": "توصيل الآن",
   "pickup_now": "استلام الآن",
-  "store_branch": "مخزن/ فرع",
+  "store_branch": "فرع",
   "time_date": "الوقت/ التاريخ",
   "item_removed_from_cart" : "تم حذف العنصر بنجاح",
   "user_cart_data" : "تم تحديث عربة التسوق بنجاح. يرجى المتابعة لاستكمال طلب.",
