--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -440,7 +440,7 @@
   "address_saved_successfully": "address saved successfully",
   "delivery_now": "delivery now",
   "pickup_now": "pickup now",
-  "store_branch": "store/branch",
+  "store_branch": "branch",
   "time_date": "time/date",
   "item_removed_from_cart": "item removed from cart successfully.",
   "user_cart_data": "cart updated successfully. please proceed to complete..",
