read more & less for description

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -513,5 +513,7 @@
   "busy" : "busy",
   "next_pagination": "next",
   "something_went_wrong_in_payment_please_try_again":"something went wrong in payment please try again",
-  "place_order": "place order"
+  "place_order": "place order",
+  "read_more": "read more",
+  "read_less": "read less"
 }
