--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -515,5 +515,6 @@
   "something_went_wrong_in_payment_please_try_again":"something went wrong in payment please try again",
   "place_order": "place order",
   "read_more": "read more",
-  "read_less": "read less"
+  "read_less": "read less",
+  "apply" : "apply"
 }
