--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -507,7 +507,7 @@
   "pickup_time_and_date":"وقت و تاريخ الاستلام",
   "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
   "no_results_found" : "لا توجد نتائج للبحث ..",
-  "your_order_has_been_received": " شكرا لك . لقد استلام طلبك بنجاح",
+  "your_order_has_been_received": "لقد استلام طلبك بنجاح",
   "store_name": "اسم المخزن",
   "let_us_know_more": "اجعلنا نعرف المزيد",
   "select_a_branch_or_area_before_order_or_some_fields_are_required_missing" : "يجب اختيار فرع / منطقة قبل البدأ في طلبك .. أو ان بعض الحقول مطلوبة",
