--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -492,7 +492,7 @@
   "pickup_time_and_date": "pickup time & date",
   "quantity_of_out_of_stock": "quantity of out of stock",
   "no_results_found" : "no results found",
-  "your_order_has_been_received": "thank you. your order has been received.",
+  "your_order_has_been_received": "your order has been received.",
   "store_name": "store name",
   "let_us_know_more": "let us know more",
   "coupon_value" : "discount",
