--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -528,5 +528,6 @@
   "something_went_wrong_in_payment_please_try_again":"حدث خطأ اثناء الدفع من فضلك حاول مرة اخرى",
   "place_order": "ضع الطلب",
   "read_more": "اقرأ المزيد",
-  "read_less":"اقرأ أقل"
+  "read_less":"اقرأ أقل",
+  "min_cart_should_be_0_25": "يجب أن يكون الحد الأدنى للطلب أكثر من 250 فلس"
 }
