--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -519,5 +519,6 @@
   "min_cart_should_be_0_25": "Minimum order should be more than 250 fils",
   "looks_like_something_went_wrong": "looks like something went wrong",
   "we_are_working_on_it": "we are working on it",
-  "try_again?": "try again?"
+  "try_again?": "try again?",
+  "out_stock":"out stock"
 }
