--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -533,5 +533,5 @@
   "looks_like_something_went_wrong": "يبدو أنه حدث خطأ ما",
   "we_are_working_on_it": "نحن نعمل عليه",
   "try_again?": "حاول مرة أخرى؟",
-  "out_stock":"انتهي المخزون"
+  "out_stock":"نفذت الكمية"
 }
