--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -534,5 +534,7 @@
   "looks_like_something_went_wrong": "يبدو أنه حدث خطأ ما",
   "we_are_working_on_it": "نحن نعمل عليه",
   "try_again?": "حاول مرة أخرى؟",
-  "out_stock":"نفذت الكمية"
+  "out_stock":"نفذت الكمية",
+  "phone_must_be_at_least_5_digits":"الرقم يجب ان يكون 5 اعداد علي الاقل",
+  "phone_must_be_at_most_15_digits":"الرقم يجب ان يكون 15 عدد على الاكثر"
 }
