add one translation line

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -531,6 +531,7 @@
   "read_less":"اقرأ أقل",
   "apply" : "تطبيق",
   "min_cart_should_be_0_25": "يجب أن يكون الحد الأدنى للطلب أكثر من 250 فلس",
+  "min_cart_should_be_4": "يجب أن يكون الحد الأدنى للطلب أكثر من ٤ د.ك",
   "looks_like_something_went_wrong": "يبدو أنه حدث خطأ ما",
   "we_are_working_on_it": "نحن نعمل عليه",
   "try_again?": "حاول مرة أخرى؟",
