--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -518,10 +518,11 @@
   "read_less": "read less",
   "apply": "apply",
   "min_cart_should_be_0_25": "Minimum order should be more than 250 fils",
+  "min_cart_should_be_4": "Minimum order should be more than 4 KD",
   "looks_like_something_went_wrong": "looks like something went wrong",
   "we_are_working_on_it": "we are working on it",
   "try_again?": "try again?",
-  "out_stock":"out stock",
-  "phone_must_be_at_least_5_digits":"phone must be at least 5 digits",
-  "phone_must_be_at_most_15_digits":"phone must be at most 15 digits"
+  "out_stock": "out stock",
+  "phone_must_be_at_least_5_digits": "phone must be at least 5 digits",
+  "phone_must_be_at_most_15_digits": "phone must be at most 15 digits"
 }
